--- a/src/styles.css
+++ b/src/styles.css
@@ -6,24 +6,75 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "IBM Plex Mono", sans-serif;
-  background-color: #f7f7f7;
+html {
+  font-size: 100%;
 }
 
-h1 {
-  margin-bottom: 12px;
+body {
+  font-family: "IBM Plex Mono", sans-serif;
+  color: #252525;
+  font-weight: 400;
+  background-color: #f7f2e9;
+  border-bottom: 1.6rem solid #edc84b;
+  border-top: 1.6rem solid #edc84b;
+  min-height: 100vh;
+  padding: 3.2rem;
+  padding-bottom: 6rem;
+}
+
+.container {
+  max-width: 80rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4.8rem;
+}
+
+.header {
+  align-self: stretch;
+}
+
+.header h1 {
+  color: #edc84b;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 5.2rem;
+  font-weight: 300;
+  letter-spacing: 3px;
+  position: relative;
+  width: 100%;
+  display: block;
+}
+
+.header h1::before,
+.header h1::after {
+  display: block;
+  content: "";
+  height: 3px;
+  width: 1rem;
+  background-color: #edc84b;
+  position: absolute;
+  top: calc(50% - 1px);
+}
+
+.header h1::before {
+  left: 0;
+}
+.header h1::after {
+  right: 0;
 }
 
 .cards {
   list-style: none;
-  display: flex;
+  display: grid;
   grid-template-columns: auto auto;
+  gap: 4.8rem;
 }
 
 .card {
   width: 450px;
-  height: 500px;
+  height: 460px;
   margin: 40px;
   border: 4px solid #222;
 }
@@ -31,6 +82,24 @@ h1 {
 .card::after {
   content: "";
   display: block;
+}
+
+.profiles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+}
+
+.profiles h2 {
+  display: inline-block;
+  padding: 1rem 0;
+  border-top: 2px solid currentColor;
+  border-bottom: 2px solid currentColor;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 500;
 }
 
 .avatar {
@@ -62,4 +131,8 @@ h1 {
   align-items: center;
   gap: 8px;
   font-weight: 500;
+}
+
+.footer {
+  font-size: 1.4rem;
 }
